--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <head>
+  <title>
+    Something
+  </title>
   <link href="/normalize.css" rel="stylesheet">
   <style>
     header {
