we are the scientists

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <nav class="navbar navbar-inverse">
     <div class="container">
       <ul class="nav navbar-nav has-links-centered">
-        <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
-        <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i> About</a></li>
+        <li><a href="https://katarzynamarek.github.io/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+        <li><a href="#about-us"><i class="fa fa-user" aria-hidden="true"></i> About</a></li>
         <li><a href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i> Contact</a></li>
         <li><a href="#"><i class="fa fa-camera" aria-hidden="true"></i> Photos</a></li>
       </ul>
@@ -23,9 +23,10 @@
   <header>
     <div class="container text-center text-light">
       <h1>Women in Science</h1>
-      <p>by Joanna Szymczak</p>
-      <p>Enida</p>
-      <p>Kasia</p>
+      <p>by</p>
+      <p>Joanna Szymczak</p>
+      <p>Enida Csiszer</p>
+      <p>Kasia Marek</p>
     </div>
   </header>
 
@@ -61,8 +62,9 @@
         <div class="col-md-4">
           <img src="ja.jpg" alt="Joanna" class="image-profile img-thumbnail">
           <h3>Joanna</h3>
-          <p>Research assistant at MDX in cognitive neuropsychology.</p>
+          <p>Research Assistant at MDX in cognitive neuropsychology.</p>
           <a target="_blank" href="https://www.linkedin.com/in/joanna-szymczak-9b0578117/"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
+            </br>
           <a target="_blank" href="https://www.instagram.com/asiaszymczak/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
         </div>
         <div class="col-md-4">
@@ -70,18 +72,57 @@
           <h3>Enida</h3>
           <p>Research Assistant at MDX</p>
           <a target="_blank" href="https://www.linkedin.com/in/csiszer-enida-luiza-341896115/"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
+            </br>
           <a target="_blank" href="https://www.instagram.com/csiszerenida/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
         </div>
         <div class="col-md-4">
           <img src="kasia.jpg" alt="Kasia" class="image-profile img-thumbnail">
           <h3>Kasia</h3>
-          <p>Honorary Assistant Psychologist at NHS</p>
+          <p>Honorary Assistant Psychologist in Clinical Neuropsychology at NHS</p>
           <a target="_blank" href="https://www.linkedin.com/in/katarzynamarek1305/"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
+            </br>
           <a target="_blank" href="https://www.instagram.com/terazkasia/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
         </div>
       </div>
     </div>
   </section>
+
+  <section id="photos">
+    <div class="container text-center text-light">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Acute Stroke Unit</h2>
+        </div>
+      <div class="col-md-10">
+        <div class=" container text-center">
+          <img src="brain.jpg" alt="Brain" class="image-brain">
+            <h3>What do I do there?</h3>
+              <p>Support  and  enhance  the  professional  psychological  care  of  clients  within  the  neuropsychological neurorehabilitation  service,  across  all  sectors  of  care;  providing  neuropsychological  assessment  and neuropsychological interventions under the supervision of a qualified professional clinical neuropsychologist, working independently according to a plan agreed with a qualified neuropsychologist and within the overall framework of the service’s  policies  and  procedures. Assist  in  clinically  related  administration,  conduct  of  audits,  collection  of statistics, development of audit and/or research projects, teaching and project work. </p>
+              <p>For details please click <a target="_blank" href="https://www.stgeorges.nhs.uk/ward/wolfson-and-thomas-young-ward/">here</a> </p>
+            <h3>How do I find the placement?</h3>
+          <p>Challenging is the best word describing the placement. I learn a lot every day and overall it was a good choice.</p>
+      </div>
+
+  </section>
+
+  <section id="photos">
+    <div class="container text-center text-light">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Science Museum</h2>
+        </div>
+
+  </section>
+
+  <section id="photos">
+    <div class="container text-center text-light">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Memory</h2>
+        </div>
+
+  </section>
+
 
   <footer id="contact">
     <div class="container text-light">
