font changes, added a table

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Women in Science</title>
+  <link href="https://fonts.googleapis.com/css?family=Bilbo+Swash+Caps" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
@@ -24,9 +25,17 @@
     <div class="container text-center text-light">
       <h1>Women in Science</h1>
       <p>by</p>
-      <p>Joanna Szymczak</p>
-      <p>Enida Csiszer</p>
-      <p>Kasia Marek</p>
+      <section id="authors">
+          <div class="row">
+            <div class="container text-center text-light">
+              <ul class="nav navbar-nav has-links-centered">
+                <li><a href="https://asiaszymczak.github.io/">Joanna Szymczak</a></li>
+                <li><a href="https://csiszerenida.github.io/">Enida Csiszer</a></li>
+                <li><a href="https://katarzynamarek.github.io/">Kasia Marek</a></li>
+              </ul>
+            </div>
+          </div>
+      </section>
     </div>
   </header>
 
@@ -34,24 +43,121 @@
     <div class="container text-light text-center">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h2>Articles</h2>
+          <h2>Who are the Women in Science?</h2>
         </div>
         <div class="col-md-6">
           <article>
-            <h3>Marie Curie-Sklodowska</h3>
-            <img src="maria.jpg" alt="Maria" class="image-article   img-thumbnail">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit autem maxime tempore ea. Corrupti, suscipit pariatur magni. Asperiores, dolore officia qui deserunt tempora laborum dicta ipsam vel esse quam quibusdam.</p>
+            <h3>Is psychology a science?</h3>
+            <br>
+            <br>
+            <h4>Yes</h4>
+             <li> Yes, in the sense that psychology was defined by the application of scientific method(s) and psychologists conduct valuable research and have developed some key insights into animal behavior, cognition, consciousness, and the human condition.</li>
+             <br>
+             <br>
+             <h4>However...</h4>
+              <li> A key feature of real scientific knowledge is that there is a clear, consensual center that provides a foothold to describe how (portions of) the world actually work. And it is here that psychology falls down in ways that physics, chemistry and biology do not. And it is in that sense that psychology is not a real science.</li>
+              <br>
+              <br>
+              <br>
+              <p>For us, those who study psychology, it is a science and <b>please do not argue with us.</b></p>
+              <br>
+              <br>
+              <p>...unless you want to check how fast we can run!</p>
           </article>
         </div>
         <div class="col-md-6">
           <article>
-            <h3>Kasia Marek</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, sunt minus sequi est dolor possimus exercitationem aspernatur amet. Ex numquam, mollitia voluptates excepturi. Cupiditate exercitationem, alias quibusdam eum quaerat est!</p>
+              <h3>Psychology is a science</h3>
+              <br>
+              <img src="psychologymeme.jpg" alt="Meme" class="image-meme  img-thumbnail">
           </article>
         </div>
       </div>
     </div>
   </main>
+
+    <section id="photos">
+    <div class="container text-center text-light">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Acute Stroke Unit</h2>
+        </div>
+      <div class="col-md-10">
+        <div class="container text-center">
+          <img src="brain.jpg" alt="Brain" class="image-brain">
+            <h3>What do I do there?</h3>
+              <p>Support  and  enhance  the  professional  psychological  care  of  clients  within  the  neuropsychological neurorehabilitation  service,  across  all  sectors  of  care;  providing  neuropsychological  assessment  and neuropsychological interventions under the supervision of a qualified professional clinical neuropsychologist, working independently according to a plan agreed with a qualified neuropsychologist and within the overall framework of the service’s  policies  and  procedures. Assist  in  clinically  related  administration,  conduct  of  audits,  collection  of statistics, development of audit and/or research projects, teaching and project work. </p>
+              <p>For details please click <a target="_blank" href="https://www.stgeorges.nhs.uk/ward/wolfson-and-thomas-young-ward/">here</a> </p>
+            <h3>How do I find the placement?</h3>
+          <p>Challenging is the best word describing the placement. I learn a lot every day and overall it was a good choice.</p>
+
+       <div class="col-md-12">
+    <article>
+        <h3>Stroke in numbers</h3>
+              <p>(State of the Nation, 2016)</p>
+
+      <section id="table">
+        <table>
+          <tr>
+            <th>Facts</th>
+            <th>Numbers</th>
+          </tr>
+          <tr>
+            <td>Stroke occurance in the UK</td>
+            <td>152,000 times a year</td>
+          </tr>
+          <tr>
+            <td>Frequency of stroke occurance in the UK</td>
+            <td>One stroke every 3 minutes 27 seconds</td>
+          </tr>
+          <tr>
+            <td>Number of stroke survivors in the UK</td>
+            <td>1.2 milion</td>
+          </tr>
+          <tr>
+            <td>Number of first-time incidence of stroke</td>
+            <td>17 milion times a year worldwide</td>
+          </tr>
+          <tr>
+            <td>Frequency of stroke occurance worldwide</td>
+            <td>One stroke every two seconds</td>
+          </tr>
+          <tr>
+            <td>Prevalence for stroke survivors to have a recurrent stroke or TIA</td>
+            <td>3 in 10</td>
+          </tr>
+          <tr>
+            <td>Strokes being fatal within the first 30 days</td>
+            <td>1 in 8</td>
+          </tr>
+          <tr>
+            <td>Strokes being fatal within a year</td>
+            <td>1 in 4</td>
+          </tr>
+      </table>
+            </article>
+          </div>
+      </div>
+</section>
+  </section>
+
+  <section id="photos">
+    <div class="container text-center text-light">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Science Museum</h2>
+        </div>
+
+  </section>
+
+  <section id="photos">
+    <div class="container text-center text-light">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Memory</h2>
+        </div>
+
+  </section>
 
   <section id="about-us">
     <div class="container text-center text-light">
@@ -86,43 +192,6 @@
       </div>
     </div>
   </section>
-
-  <section id="photos">
-    <div class="container text-center text-light">
-      <div class="row">
-        <div class="col-md-12">
-          <h2>Acute Stroke Unit</h2>
-        </div>
-      <div class="col-md-10">
-        <div class=" container text-center">
-          <img src="brain.jpg" alt="Brain" class="image-brain">
-            <h3>What do I do there?</h3>
-              <p>Support  and  enhance  the  professional  psychological  care  of  clients  within  the  neuropsychological neurorehabilitation  service,  across  all  sectors  of  care;  providing  neuropsychological  assessment  and neuropsychological interventions under the supervision of a qualified professional clinical neuropsychologist, working independently according to a plan agreed with a qualified neuropsychologist and within the overall framework of the service’s  policies  and  procedures. Assist  in  clinically  related  administration,  conduct  of  audits,  collection  of statistics, development of audit and/or research projects, teaching and project work. </p>
-              <p>For details please click <a target="_blank" href="https://www.stgeorges.nhs.uk/ward/wolfson-and-thomas-young-ward/">here</a> </p>
-            <h3>How do I find the placement?</h3>
-          <p>Challenging is the best word describing the placement. I learn a lot every day and overall it was a good choice.</p>
-      </div>
-
-  </section>
-
-  <section id="photos">
-    <div class="container text-center text-light">
-      <div class="row">
-        <div class="col-md-12">
-          <h2>Science Museum</h2>
-        </div>
-
-  </section>
-
-  <section id="photos">
-    <div class="container text-center text-light">
-      <div class="row">
-        <div class="col-md-12">
-          <h2>Memory</h2>
-        </div>
-
-  </section>
-
 
   <footer id="contact">
     <div class="container text-light">
