--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
+  <script type="text/javascript" src="mainjs2.js"></script>
 </head>
 
 <body>
@@ -16,7 +21,7 @@
         <li><a href="https://katarzynamarek.github.io/"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
         <li><a href="#about-us"><i class="fa fa-user" aria-hidden="true"></i> About</a></li>
         <li><a href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i> Contact</a></li>
-        <li><a href="#"><i class="fa fa-camera" aria-hidden="true"></i> Photos</a></li>
+        <li><a href="https://katarzynamarek.github.io/surprise"><i class="fa fa-gift" aria-hidden="true"></i></i> Surprise</a></li>
       </ul>
     </div>
   </nav>
@@ -172,14 +177,20 @@
           <a target="_blank" href="https://www.linkedin.com/in/joanna-szymczak-9b0578117/"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
             </br>
           <a target="_blank" href="https://www.instagram.com/asiaszymczak/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
+            </br>
+          <a target="_blank" href="https://github.com/asiaszymczak"><i class="fa fa-instagram" aria-hidden="true"></i> Github</a>
+
         </div>
         <div class="col-md-4">
           <img src="enida.jpg" alt="Enida" class="image-profile img-thumbnail">
           <h3>Enida</h3>
-          <p>Research Assistant at MDX</p>
+          <p>Research Assistant at MDX in Cognitive Neuropsychology</p>
           <a target="_blank" href="https://www.linkedin.com/in/csiszer-enida-luiza-341896115/"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
             </br>
           <a target="_blank" href="https://www.instagram.com/csiszerenida/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
+        </br>
+      <a target="_blank" href="https://github.com/CsiszerEnida"><i class="fa fa-instagram" aria-hidden="true"></i> Github</a>
+
         </div>
         <div class="col-md-4">
           <img src="kasia.jpg" alt="Kasia" class="image-profile img-thumbnail">
@@ -188,6 +199,9 @@
           <a target="_blank" href="https://www.linkedin.com/in/katarzynamarek1305/"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
             </br>
           <a target="_blank" href="https://www.instagram.com/terazkasia/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
+        </br>
+      <a target="_blank" href="https://github.com/katarzynamarek"><i class="fa fa-instagram" aria-hidden="true"></i> Github</a>
+
         </div>
       </div>
     </div>
