--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <input type="text" placeholder="Surname">
             <input type="text" placeholder="Email address">
             <input type="text" placeholder="Message">
-            <button>Send</button>
+            <button id=send>Send</button>
           </form>
         </div>
       </div>
