--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
   <header>
     <div class="container text-center text-light">
       <h1>Women in Science</h1>
-      <p>by</p>
       <section id="authors">
           <div class="row">
             <div class="container text-center text-light">
-              <ul class="nav navbar-nav has-links-centered">
+              <ul class="authors has-links-centered">
                 <li><a href="https://asiaszymczak.github.io/">Joanna Szymczak</a></li>
                 <li><a href="https://csiszerenida.github.io/">Enida Csiszer</a></li>
                 <li><a href="https://katarzynamarek.github.io/">Kasia Marek</a></li>
@@ -140,6 +139,8 @@
             <td>1 in 4</td>
           </tr>
       </table>
+
+      <img src="brain.gif" alt="" style="width: 500px">
             </article>
           </div>
       </div>
