--- a/surprise/index.html
+++ b/surprise/index.html
@@ -16,27 +16,17 @@
 
 <body>
 
-  <section>
+
    <div class="container text-center text-light">
      <div class="row">
        <div class="col-md-12">
          <h2>To be enlightened, please click me!</h2>
         <i id="bulb" class="fa fa-lightbulb-o" aria-hidden="true"></i>
-        <h2 id="text">Well done, now you are just as bright as the Women in Science :)</h2>
+        <h2 id="text">Well done, now you are just as bright as the <a target="_blank" href="https://katarzynamarek.github.io/">Women in Science</a> :)</h2>
         </div>
       </div>
     </div>
-  </section>
 
-  <footer>
-    <div class="container text-center text-light">
-      <div class="row">
-        <div class="col-md-12">
-    <a href="https://katarzynamarek.github.io/">Go back to home website</a>
-  </div>
-</div>
-</div>
-  </footer>
 
 </body>
 </html>
