--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="col-md-4">
           <img src="ja.jpg" alt="Joanna" class="image-profile img-thumbnail">
           <h3>Joanna</h3>
-          <p>Research Assistant at MDX in cognitive neuropsychology.</p>
+          <p>Research Assistant at MDX </br> in Cognitive Neuropsychology.</p>
           <a target="_blank" href="https://www.linkedin.com/in/joanna-szymczak-9b0578117/"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
             </br>
           <a target="_blank" href="https://www.instagram.com/asiaszymczak/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
@@ -191,6 +191,8 @@
           <a target="_blank" href="https://www.instagram.com/csiszerenida/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
         </br>
       <a target="_blank" href="https://github.com/CsiszerEnida"><i class="fa fa-instagram" aria-hidden="true"></i> Github</a>
+    </br>
+  </br>
 
         </div>
         <div class="col-md-4">
@@ -202,6 +204,7 @@
           <a target="_blank" href="https://www.instagram.com/terazkasia/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
         </br>
       <a target="_blank" href="https://github.com/katarzynamarek"><i class="fa fa-instagram" aria-hidden="true"></i> Github</a>
+    </br>
 
         </div>
       </div>
