--- a/index.html
+++ b/index.html
@@ -152,8 +152,14 @@
       <div class="row">
         <div class="col-md-12">
           <h2>Science Museum</h2>
+            <h3> What do I study? </h3>
+              <p> Bsc Psychology with Neuroscience <p>
+            <h3> How did I found placement and why? </h3>
+              <p> To have experience in academia and to see what are the options after finishing my degree. </p>
+              <p> I started to look for different placements' opportunities by myself online. It was not easy at all! Most of the places required already to have some experience in certain fields. As I was thiniking of staying in academia as my future carrer, I started to e-mail various lecturers at my university and simpy asking for any advices and so on. After e-mailing one of them milion times (literary milion times....) I was offered internal placement at the univeristy!(GOD BLESS YOU ALEX!).</p>
+              <p> Soon after I signed my contract, another lecturer got back to me asking if I would like to work for her. And so I ended up with two internship in cognitive neuropsychology (full-time) and in developmental psychology (part-time)</p>
+            <h3> What do I do as a research assistant? </h3>
         </div>
-
   </section>
 
   <section id="photos">
