--- a/index.html
+++ b/index.html
@@ -159,8 +159,10 @@
               <p> To have experience in academia and to see what are the options after finishing my degree. </p>
               <p> I started to look for different placements' opportunities by myself online. It was not easy at all! Most of the places required already to have some experience in certain fields. As I was thiniking of staying in academia as my future carrer, I started to e-mail various lecturers at my university and simpy asking for any advices and so on. After e-mailing one of them milion times (literary milion times....) I was offered internal placement at the univeristy!(GOD BLESS YOU ALEX!).</p>
               <p> Soon after I signed my contract, another lecturer got back to me asking if I would like to work for her. And so I ended up with two internship in cognitive neuropsychology (full-time) and in developmental psychology (part-time)</p>
-            <h3> What do I do as a research assistant? </h3>
+
         </div>
+      </div>
+    </div>
   </section>
 
   <section id="photos">
@@ -168,7 +170,29 @@
       <div class="row">
         <div class="col-md-12">
           <h2>Memory</h2>
+          <article>
+          <h3> My Experience</h3>
+              <br>
+              <br>
+              <p> I have a year placement which comprises of 4 projects. The first and current one revolves around memory and the differences between healthy young and elderly people. We are trying to figure out how certen aspectes of memory change with age and what other processes are involved in helping us not become a confuse mess. </p>
+
+              <p>The following will enlove EEG testing, memory and attention and it will be my disertation project. Finally, if all goes as planed I should still have enough time to do a second part of the firtst project and a nother one envolving memory and music.
+              </p>
+
+              <p>As far I coverd the ethical application, did some backgorund researcha and tested both young and elderly participants.I find it quite interesting and I believe I have learnd some valuble skills such as working in Matlab, administering different questionairs, some social and team work skills. I am very excited for my next project and hope it will run smoothly.
+              </p>
+
+              <p>My supervisor is lovely. She does offer the suport and guidence I need to be able to conduct this work consequently, I am confident with what I do and believe it will significally encrease my employability chances.
+            </article>
+          </div>
         </div>
+      </div>
+
+            <br>
+            <br>
+            <div class="col-md-12">
+              <img src="brain.train.gif">
+          </div>
 
   </section>
 
